
Feedback 7.x-2.x, xxxx-xx-xx
----------------------------
#1014726 by Jody Lynn: Changed Add constants for feedback status codes.
#775322 by Jody Lynn: Mollom integration
#351698 by Jody Lynn and sun: feedback is now a fieldable entity!
#1086552 by Dru-p, Jody Lynn, sun: prevent PHP notice
by Jody Lynn: spelling error in comment
by The Great Git Migration: Stripping CVS keywords
#305744 by sun: Replaced custom JS form submissions with AJAX framework.
by sun: Updated for new resizable textarea markup.
#402438 by sun: Fixed minor CRUD API glitches and cleaned up code.
#402438 by Jody Lynn, sun: Added proper CRUD API functions and hooks.
by sun: Added basic tests.
#1011152 by sun, Jody Lynn: Removed translations directory.
#961674 by pmorel, sun: Updated for various D7 API changes.
by sun: Ported to Drupal 7.


Feedback 6.x-2.x, xxxx-xx-xx
----------------------------
#730582 by q0rban, Michel Poulain, sun: Fixed styling in WebKit browsers.
#387818 by antgiant: Fixed width of feedback textarea.
#688306 by Berdir: Fixed compatibility with PHP 5.3.


Feedback 6.x-2.1, 2010-01-27
----------------------------
#690856 by sun (SA-2010-011): Fixed un-escaped user agent string.
by sun: Fixed JS behaviors are executed more than once.
#636158 by smk-ka: Changed administrative page callbacks to be located in admin
  include.
#370223 by sun, Jeff Burnz: Fixed compatibility with custom block markup.
#341667 by sun: Fixed IE6 does not support position: fixed.
#409590 by sun: Added storage and output of absolute URL for feedback messages.
#378878 by jcruz, sun: Added display of useragent if Browscap is not installed.
#364388 by xibun: Added French translation.
#357247 by cassus: Added Hungarian translation.
#350356 by sun: Fixed README.txt.
#299847 by sun: Fixed pager not properly generated for admin list of feedbacks.
#302358 by sun: Fixed upgrade path to Drupal 6.x.


Feedback 6.x-2.0, 2008-10-19
----------------------------